heirarchy spacing fixes

--- a/src/app/views/editor/scene-hierarchy/scene-hierarchy.component.scss
+++ b/src/app/views/editor/scene-hierarchy/scene-hierarchy.component.scss
@@ -19,8 +19,8 @@
 .mat-icon-button {
 	padding: 0;
 	min-width: 0;
-	width: 36px;
-	height: 36px;
+	width: 32px;
+	height: 32px;
 	flex-shrink: 0;
 	line-height: 40px;
 	border-radius: 50%;
