--- a/src/assets/styles/scss/themes/desktop-dark-theme.scss
+++ b/src/assets/styles/scss/themes/desktop-dark-theme.scss
@@ -135,7 +135,7 @@ $border-radius: 0px !important;
 	}
 
 	.mat-tree-node .mat-icon {
-		line-height: 18px;
+		line-height: 14px;
 		font-size: 18px;
 	}
 
